force-app/main/default/objects/ARTL_Feasibility_Attribute__c/ARTL_Feasibility_Attribute__c.object-meta.xml
<CustomObject>
    <label>Feasibility Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feasibility Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>