force-app/main/default/objects/ARTL_Feasibility_Attribute__c/fields/ARTL_Feasibility__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Feasibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FeasibilityId</label>
    <referenceTo>ARTL_Feasibility__c</referenceTo>
    <relationshipLabel>Feasibility Attributes</relationshipLabel>
    <relationshipName>Feasibility_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>