force-app/main/default/objects/ARTL_Feasibility_Attribute__c/fields/ARTL_Feasibility_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Feasibility_Line_Item__c</fullName>
    <label>Feasibility Line Item</label>
    <referenceTo>ARTL_Feasibility_Line_Item__c</referenceTo>
    <relationshipLabel>Feasibility Attributes</relationshipLabel>
    <relationshipName>Feasibility_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>