force-app/main/default/objects/ARTL_Feasibility_Attribute__c/fields/ARTL_QLI__c.field-meta.xml
<CustomField>
    <fullName>ARTL_QLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Feasibility Attributes</relationshipLabel>
    <relationshipName>Feasibility_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>